2013-03-26  Andreas Kupries  <andreask@activestate.com>

	* pkgIndex.tcl: Fixed, was missing struct::queue version bump
	  causing mismatch.

2013-03-18  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* queue.testsuite: [Bug 3608240]: Fixed get/peek not taking
	* queue_oo.tcl: the amount of already delivered elements
	* queue_tcl.tcl: into account. Extended testsuite. Bumped version
	  to 1.4.5

2013-02-01  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.15 ========================
	* 

2013-01-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* queue.tcl: Rewritten, simplified. The 8.5 requisite means
	* queue_oo.tcl: that we have extended requirement syntax allowing
	* stack.tcl: us to jump the major version barrier without fuss.
	* stack_oo.tcl:

2013-01-08  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pkgIndex.tcl: Fixed package require mismatch for use of TclOO
	* queue.man: in Tcl 8.6+. This is TclOO v1 (major version change).
	* queue.tcl: Now accepting 0.6.1+ and 1+. Versions bumped to
	* queue_oo.tcl: 1.4.4 and 1.5.3 respectively.
	* stack.man:
	* stack.tcl:
	* stack_oo.tcl:

2012-12-07  Andreas Kupries  <andreask@activestate.com>

	* list.tcl: [Bug 3593689]. Applied patch by Donal Fellows fixing
	* list.test: a busyloop in [nextperm] due to use of the wrong
	* pkgIndex.tcl: comparison operator. Bumped version to 1.8.2.
	* struct_list.man: Added test for this.

2012-11-21  Andreas Kupries  <andreask@activestate.com>

	* pkgIndex.tcl: Fixed package require mismatch for use of TclOO.
	* queue.man: Load check accepts anything, code restricts to 0.6.1.
	* queue.tcl: Now both restrict to 0.6.1+. Versions bumped to
	* stack.man: 1.4.3 and 1.5.2 respectively.
	* stack.tcl:

2012-07-09  Andreas Kupries  <andreask@activestate.com>

	* tree/m.c (tm_ATTR): Fixed non-static string array used in call
	  of Tcl_GetIndexFromObj(). Memory smash waiting to happen. Thanks