@@ -1,12 +1,12 @@
 [comment {-*- tcl -*-}]
 [manpage_begin struct::matrix n 2.0.1]
 [keywords matrix]
-[copyright {2002 Andreas Kupries <andreas_kupries@users.sourceforge.net>}]
+[copyright {2002-2013 Andreas Kupries <andreas_kupries@users.sourceforge.net>}]
 [moddesc   {Tcl Data Structures}]
 [titledesc {Create and manipulate matrix objects}]
 [category  {Data structures}]
 [require Tcl 8.2]
-[require struct::matrix [opt 2.0.1]]
+[require struct::matrix [opt 2.0.3]]
 [description]
 [para]
 
@@ -178,6 +178,10 @@ values currently contained in the cells of the addressed column if
 these are all spanning only one line. For cell values spanning
 multiple lines the length of their longest line goes into the
 computation.
+
+[para][emph Note:] The command recognizes ANSI color control sequences
+and excludes them from the width of a line, as they are logically of
+zero width.
 
 [call [arg matrixName] [method {delete column}] [arg column]]
 
